@@ -1,6 +1,6 @@
-class Visitor < ActiveRecord::Base
-  has_no_table
-  column :email, :string
+class Visitor
+  include ActiveModel::Model
+  attr_accessor :email, :string
   validates_presence_of :email
   validates_format_of :email, :with => /\A[-a-z0-9_+\.]+\@([-a-z0-9]+\.)+[a-z0-9]{2,4}\z/i
 
